8236709: struct SwitchRange in HS violates C++ One Definition Rule

Reviewed-by: dholmes, kbarrett